<resources>
    <string name="app_name">MyCode</string>


    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>


    <string name="selamat">Hallo!</string>
    <string name="selamat_datang">Selamat Datang Di Unikom Apps, Silahkan Mendaftar Untuk Membuat Akun Atau Login Apabila Sudah Memiliki Akun Unikom Ceria!</string>

    <string name="splash1_txt1">UNIKOM - World Class University 2022 (Rank 808)</string>
    <string name="splash1_txt2">One of the 3 Private Universities (PTS) Dan 6 State Universities (PTN) from West Java included in World Class University (WCU) 2022 (UI, IPB, UPI, ITB, UNPAD, UIN, UNIKOM, 2 PTS) SCImago Institutions Ranking (SIR), September 10th 2022</string>

    <string name="splash2_txt1">Universitas Komputer Indonesia (UNIKOM) mendapat Peringkat 3 PTS terbaik Jawa Barat versi pemeringkat UniRank.UniRank merupakan lembaga pembuat rangking perguruan tinggi internasional yang berpusat di Sydney, Australia.</string>
    <string name="confirm_password">Confirm Password</string>

</resources>